--- a/src/hugo.toml
+++ b/src/hugo.toml
@@ -7,3 +7,15 @@ title = 'GameBlog'
   # replacements = "github.com/panr/hugo-theme-terminal/4 -> themes/terminal"
 [[module.imports]]
   path = 'github.com/panr/hugo-theme-terminal/v4'
+
+[params]
+
+# set theme to full screen width
+  fullWidthTheme = true
+
+# whether to show a page's estimated reading time
+  readingTime = true
+
+# whether to show a table of contents
+# can be overridden in a page's front-matter
+  Toc = true
