--- a/src/hugo.toml
+++ b/src/hugo.toml
@@ -16,6 +16,6 @@ title = 'GameBlog'
 # whether to show a page's estimated reading time
   readingTime = true
 
-# whether to show a table of contents
-# can be overridden in a page's front-matter
-  Toc = true
+  dateFormat = "02-01-2006" # This value can be configured for per-post date formatting
+
+  author = "Game"
